# hackfd-swarm-center

./: Dockerfile  README.md  dockerbuild.sh  dockerrun.sh  entrypoint.sh  run1.sh  run2.sh  run_pg.sh
assets/worlds/: mission_1.world  mission_2.world
data/: drones_all.csv  drones_scenario.csv  scenario2.csv
repo_files/: _notes.txt
src/drone_action_model/: CMakeLists.txt  package.xml
src/drone_action_model/launch/: launch_drones.py  launch_empty_world.py  launch_mission.py  launch_mission1.py  launch_mission2.py
src/drone_action_model/src/: camera_node.cpp  kinematics_node.cpp  motion_plan_node.cpp  motion_planner_node.cpp  state_reporter_node.cpp
src/drone_ui/: package.xml  setup.py
src/drone_ui/drone_ui/: pygame_node.py
src/drone_ui/drone_ui/utils/: _constants.py  coordination_tools.py  topic_tools.py  ui_tools.py
src/drone_ui/launch/: launch_pg.py  launch_s1.py  launch_s2.py  launch_test.py
